# hermes-memory-evidence-repair

./: CHANGELOG.md  INSTALL.md  LICENSE  README.md  plugin.yaml  pyproject.toml
.github/workflows/: tests.yml
scripts/: verify_wheel_install.py
src/hermes_memory_evidence_repair/: __init__.py  compat.py
tests/: conftest.py  test_plugin_registration.py
tests/core/: test_memory_evidence_repair_apply_preview.py  test_memory_evidence_repair_approval.py  test_memory_evidence_repair_approval_token_gate.py  test_memory_evidence_repair_commit_gate.py  test_memory_evidence_repair_commit_ledger.py  test_memory_evidence_repair_commit_receipt.py  test_memory_evidence_repair_executor_preview.py  test_memory_evidence_repair_human_approval_token.py  test_memory_evidence_repair_manual_commit_dry_run.py  test_memory_evidence_repair_planner.py  test_memory_evidence_repair_post_commit_audit_preview.py  test_memory_evidence_repair_recovery_approval_token_gate.py  test_memory_evidence_repair_recovery_closure_finalization_readiness_preview.py  test_memory_evidence_repair_recovery_closure_gate.py  test_memory_evidence_repair_recovery_closure_governance_seal_audit_preview.py  test_memory_evidence_repair_recovery_closure_governance_seal_preview.py  test_memory_evidence_repair_recovery_closure_ledger_audit_preview.py  test_memory_evidence_repair_recovery_closure_ledger_preview.py  test_memory_evidence_repair_recovery_completion_audit_preview.py  test_memory_evidence_repair_recovery_completion_receipt.py  test_memory_evidence_repair_recovery_decision_gate.py  test_memory_evidence_repair_recovery_execution_preview.py  test_memory_evidence_repair_recovery_executor_preview.py  test_memory_evidence_repair_recovery_human_approval_token.py  test_memory_evidence_repair_recovery_write_lock_gate.py  test_memory_evidence_repair_rollback_drill_preview.py  test_memory_evidence_repair_rollback_plan.py  test_memory_evidence_repair_snapshot_planner.py  (+1 more)
tools/: __init__.py  registry.py
(+87 files in other folders)
