[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-memory-evidence-repair"
version = "0.1.3"
description = "Standalone Hermes plugin for read-only Memory Evidence Repair governance workflows."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Hermes Memory Fabric contributors"}]
keywords = ["hermes-agent", "memory-fabric", "governance", "plugin"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/johns25chen/hermes-memory-evidence-repair"
Repository = "https://github.com/johns25chen/hermes-memory-evidence-repair"
Issues = "https://github.com/johns25chen/hermes-memory-evidence-repair/issues"
Releases = "https://github.com/johns25chen/hermes-memory-evidence-repair/releases"

[project.entry-points."hermes_agent.plugins"]
memory-evidence-repair = "hermes_memory_evidence_repair:register"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
